MDEV-37832 The IF operator implicitly sets SHARED LOCK

InnoDB was supposed to take shared lock only for reads that are
part of data-modifying statement. 20+ years ago, when this logic
was implemented the only way to check for that was
`sql_command != SQLCOM_SELECT` which is overly broad.

Let's use `is_update_query(sql_command)` instead. It uses per-statement
flag (that didn't exist back then) and is much more fine-grained.

Update main.innodb_mysql_lock2 test changing many test cases that used
to say "this shouldn't take shared lock, but in practice InnoDB does".

Also, remove an impossible condition
`(lock_type == TL_READ_HIGH_PRIORITY && in_lock_tables)`:
this lock level can only come from `SELECT HIGH_PRIORITY`,
and never from `LOCK TABLES` statement.